# FiltersforCNN

./: .gitignore  CMakeLists.txt  GaussianFilter.cpp  LICENSE  README.md  a.out  functions.cpp  functions.h
src/: GaussianFilter.cpp  functions.cpp  functions.h
